# serial_comm_py

./: CMakeLists.txt  README.md  package.xml
scripts/: serial_comm.py  serial_comm_client.py  serial_comm_server.py
srv/: Device.srv
